# Abstract-VM

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
abstract_vm_testers/: assert_corect  assert_incorrect  division_by_zero  lexical_error2  modulo_by_zero  operations  overflow32  print  print_correct  underflowDouble
examples/: division_by_zero  lexical_error  overflowFloat  print_incorrect  underflow16  underflow8
srcs/: AbstractVmStack.cpp  AbstractVmStack.hpp  CommandList.cpp  CommandList.hpp  IOperand.hpp  Operand.hpp  OperandFactory.cpp  OperandFactory.hpp  main.cpp  utilities.cpp  utilities.hpp
srcs/AbstractVmLib/: CommandList.cpp
srcs/AbstractVmLib/Operand/: Operand.hpp  OperandExceptions.cpp  OperandExceptions.hpp  OperandFactory.cpp
srcs/AbstractVmLib/Parse/: Parser.cpp  Parser.hpp
srcs/Operand/: Operand.hpp  OperandFactory.hpp
srcs/Parse/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp
tests/: Abstract_Vm_Stack_Tests.cpp  Command_List_Tests.cpp  Operand_Calculation_Tests.cpp  Operand_Factory_Tests.cpp  Tests.hpp  main.cpp
